<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:key="@string/pref_location_key"
        android:singleLine="true"
        android:title="@string/pref_location_label" />

    <ListPreference
        android:entries="@array/prev_units_options"
        android:entryValues="@array/pref_unit_values"
        android:defaultValue="@string/pref_units_label_metric"
        android:key="@string/pref_temperature_key"
        android:title="@string/pref_temperature_units"
        android:dialogTitle="@string/pref_temperature_units" />

</PreferenceScreen>
